# leadsheet-player

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
leadsheet/: Cargo.toml
leadsheet/examples/: gen.rs  validate.rs
leadsheet/src/: arrange.rs  lib.rs  model.rs  style.rs
leadsheet/src/formats/: biab.rs  midi.rs  mod.rs
leadsheet/tests/fixtures/: sampler.mgu
web/: Cargo.toml  Trunk.toml  demo.mgu  index.html  manifest.json  service-worker.js
web/src/: app.rs  audio.rs  cloud.rs  library.rs  main.rs  notation.rs
